Load the alergens into the form

--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Food and Me!</title>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </head>
 <body>
 
 <h1>Food and me</h1>
 
+
 <h2>My restrictions</h2>
+
+<form id="restrictions" action="">
+
+    <input type="submit" value="Save">
+</form>
+
 
 <h2>Identify product</h2>
 
 <h2>Evaluation</h2>
 
 </body>
+
 </html>
