--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
 </head>
 <body>
+<div class="container">
+    <img src="logo.jpg" width="120">
 
-    <h1>Food and me</h1>
-    
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
@@ -32,6 +33,7 @@
                 </div>
             </div>
         </div>
+
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingTwo">
                 <h4 class="panel-title">
@@ -46,6 +48,7 @@
                 </div>
             </div>
         </div>
+
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingThree">
                 <h4 class="panel-title">
@@ -60,7 +63,9 @@
                 </div>
             </div>
         </div>
+
     </div>
+</div>
 
 </body>
 
