Add commposition check

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 					</form>
 					<h3 id="product-name"></h3>
 					<p id="product-composition"></p>
+
+  					<p class="bg-success hide" id="check-ok">Yep, looks all right.</p>
+  					<p class="bg-danger hide" id="check-nok">Something's wrong, double check the composition !</p>
                 </div>
             </div>
         </div>
