Save settings in localStorage

--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
-                    <form action="">
+                    <form id="restrictions-form" action="">
                         <div id="restrictions" class="form-group">
                             <label>Select your allergies:</label>
+                            <div class="checkbox"><label>
+                            	<input type="text" id="custom-unwanted-nutriment" placeholder="Insert custom" />
+                        	</label></div>
                         </div>
                         <button type="submit" class="btn btn-default">Save</button>
                     </form>
