Handle scanner return

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
     <img src="logo.jpg" width="120">
 
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
