Add confirmation to the settings formular

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                         </div>
                         <button type="submit" class="btn btn-default">Save</button>
                     </form>
+                    <div style="margin:20px 0;" id="alter-restriction-saved" class="alert alert-success hide" role="alert">
+					  <strong>Well done!</strong> You successfully update your restrictions.
+					</div>
                 </div>
             </div>
         </div>
