Add more advanced composition parsing

--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
+                	<div class="alert alert-info">
+					  <strong>Actual restrictions:</strong> </br> <span id="actual-restrictions"> empty <span>
+					</div>
                     <form id="restrictions-form" action="">
                         <div id="restrictions" class="form-group">
-                            <label>Select your allergies:</label>
+                            <label>Change your allergies:</label>
                             <div class="checkbox"><label>
                             	<input type="text" id="custom-unwanted-nutriment" placeholder="Insert custom" />
                         	</label></div>
