Add data validation and feedback

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
   					<p class="bg-success hide" id="check-ok">Yep, looks all right.</p>
   					<p class="bg-danger hide" id="check-nok">Something's wrong, double check the composition !</p>
+  					<p class="bg-warning hide" id="check-nodata">No data to process... You'll have to do it yourself, sorry.</p>
                 </div>
             </div>
         </div>
