--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 					</div>
                     <form id="restrictions-form" action="">
                         <div id="restrictions" class="form-group">
-                            <label>Change your allergies:</label>
+                            <label>Change your restrictions:</label>
                             <div class="checkbox"><label>
-                            	<input type="text" id="custom-unwanted-nutriment" placeholder="Insert custom" />
+                            	<input type="text" id="custom-unwanted-nutriment" placeholder="Custom CSV format" />
                         	</label></div>
                         </div>
                         <button type="submit" class="btn btn-default">Save</button>
