--- a/index.html
+++ b/index.html
@@ -82,20 +82,20 @@
 					<h3 id="product-name"></h3>
 					<p id="product-composition"></p>
 
-  					<p class="bg-success hide" id="check-ok">Yep, looks all right.</p>
-  					<p class="bg-danger hide" id="check-nok">Something's wrong, double check the composition !</p>
-  					<p class="bg-warning hide" id="check-nodata">No data to process... You'll have to do it yourself, sorry.</p>
+  					<p class="alert alert-success hide" id="check-ok">Yep, looks all right.</p>
+  					<p class="alert alert-danger hide" id="check-nok">Something's wrong, double check the composition !</p>
+  					<p class="alert alert-warning hide" id="check-nodata">No data to process... You'll have to do it yourself, sorry.</p>
                 </div>
             </div>
         </div>
     </div>
-    <small>Version 0.0.8</small>
+    <small>Version 0.0.9</small>
 </div>
 
 </body>
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="script.js?v=0.0.8"></script>
+<script src="script.js?v=0.0.9"></script>
 
 </html>
