--- a/index.html
+++ b/index.html
@@ -89,14 +89,17 @@
             </div>
         </div>
     </div>
-	     <small><b>ABOUT</b>
-		    The project “Food and Me” aims to help users choosing the right food accordin on their needs. “Food and me” is based on open food dataset (https://www.openfood.ch/?locale=en), an open access database on information about barcoded food products sold in Switzerland. Users of “Food and Me” application would be able to: 
+	     <small><b>ABOUT</b><br/>
+		    The project “Food and Me” aims to help users choosing the right food accordin on their needs. 
+		     “Food and me” is based on open food dataset (https://www.openfood.ch/?locale=en), 
+		     an open access database on information about barcoded food products sold in Switzerland. 
+		     Users of “Food and Me” application would be able to: <br/>
 		    <ul>
 			    <li>Select the list of ingredients they want to avoid. This list of ingredient is taken from openfoodfacts (https://ch-fr.openfoodfacts.org/)</li>
 			    <li>Identify the product using its barcode. The barcode may be scanning, written manually, or searched.</li>
 		    </ul>
 		    Depending on the ingredients of the product identified “food and Me” notifies the users if they can consume or not this product. The users may ask for alternative products.  
-	    </small>
+	    </small></br>
 	    
     <small>Version 0.0.9</small>
 </div>
