--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 	    	<div>
 	     <small><b>ABOUT</b><br>
 		    The project “Food and Me” aims to help users choosing the right food accordin on their needs. 
-		     “Food and me” is based on open food dataset (https://www.openfood.ch/?locale=en), 
+		     “Food and me” is based on 
+		     <a href="https://www.openfood.ch/?locale=en">open food dataset</a>,
 		     an open access database on information about barcoded food products sold in Switzerland. 
 		     Users of “Food and Me” application would be able to: <br>
 		    <ul>
@@ -100,7 +101,7 @@
 			    <li>Identify the product using its barcode. The barcode may be scanning, written manually, or searched.</li>
 		    </ul>
 		    Depending on the ingredients of the product identified “food and Me” notifies the users if they can consume or not this product. The users may ask for alternative products.  
-	    </small><br>
+	    </small><br><br><br>
 	   	 </div>
     <small>Version 0.0.9</small>
 </div>
