--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 		     an open access database on information about barcoded food products sold in Switzerland. 
 		     Users of “Food and Me” application would be able to: <br>
 		    <ul>
-			    <li>Select the list of ingredients they want to avoid. This list of ingredient is taken from openfoodfacts (https://ch-fr.openfoodfacts.org/)</li>
+			    <li>Select the list of ingredients they want to avoid. This list of ingredient is taken 
+				    from  <a href="https://ch-fr.openfoodfacts.org/">openfoodfacts</a></li>
 			    <li>Identify the product using its barcode. The barcode may be scanning, written manually, or searched.</li>
 		    </ul>
 		    Depending on the ingredients of the product identified “food and Me” notifies the users if they can consume or not this product. The users may ask for alternative products.  
