--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
 	<div>
 	     <small><b>ABOUT</b><br>
-		    The project “Food and Me” aims to help users choosing the right food accordin on their needs. 
+		    The project “Food and Me” aims to help users choosing the right food according to their needs. 
 		     “Food and me” is based on 
 		     <a href="https://www.openfood.ch/?locale=en">open food dataset</a>,
 		     an open access database on information about barcoded food products sold in Switzerland. 
