Move the about in a left panel

--- a/index.html
+++ b/index.html
@@ -114,12 +114,14 @@
 
                     <br><br>
                     This is an open source project, source code is available on Github: <a href="https://github.com/foodandme/foodandme">github.com/foodandme/foodandme</a>
+                    <hr>
+                    <small class="pull-right">Version 0.0.10</small>
+
                 </div>
             </div>
 
         </div>
 
-        <small>Version 0.0.10</small>
     </div>
 
 </body>
