Move more info link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                               <input id="barcode" type="text" placeholder="Insert codebar" value="7613269300748">
                               <br><button id="check" type="button" class="btn btn-default">Check</button>
                             </form>
-                            <h3 id="product-name"></h3><small id="product-more-link"></small>
+                            <h3 id="product-name"></h3>
                             <p id="product-composition"></p>
 
                             <p class="alert alert-success hide" id="check-ok">Yep, looks all right.</p>
