--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
 </head>
 <body>
 <div class="container-fluid">
-    <img src="logo.jpg" width="120">
 
     <div class="row">
+
+        <div class="col-md-12 header">
+            <img src="logo.jpg"class="pull-left">
+            <h1>Let's choose the right food FOR you...</h1>
+        </div>
+
         <div class="col-md-8">
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
