Remove the save button in restrictions

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
                                         <input type="text" id="custom-unwanted-nutriment" placeholder="Custom CSV format" />
                                     </label></div>
                                 </div>
-                                <button type="submit" class="btn btn-default">Save</button>
                             </form>
                             <div style="margin:20px 0;" id="alter-restriction-saved" class="alert alert-success hide" role="alert">
                               <strong>Well done!</strong> You successfully update your restrictions.
@@ -120,7 +119,7 @@
                     <br><br>
                     This is an open source project, source code is available on Github: <a href="https://github.com/foodandme/foodandme">github.com/foodandme/foodandme</a>
                     <hr>
-                    <small class="pull-right">Version 0.0.11</small>
+                    <small class="pull-right">Version 0.0.12</small>
 
                 </div>
             </div>
@@ -128,11 +127,12 @@
         </div>
 
     </div>
-
+    
+</div>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="script.js?v=0.0.11"></script>
+<script src="script.js?v=0.0.12"></script>
 
 </html>
