--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css?v=0.0.13">
+    <link rel="stylesheet" type="text/css" href="style.css?v=0.0.14">
 
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="favicon/apple-touch-icon-57x57.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="favicon/apple-touch-icon-114x114.png" />
@@ -55,7 +55,7 @@
                     <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                         <div class="panel-body">
                             <div class="alert alert-info">
-                              <strong>Actual restrictions:</strong> </br> <span id="actual-restrictions"> empty <span>
+                              <strong>Actual restrictions:</strong> <br /> <span id="actual-restrictions"> empty </span>
                             </div>
                             <form id="restrictions-form" action="">
                                 <div id="restrictions" class="form-group">
@@ -82,10 +82,11 @@
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
                         <div class="panel-body">
-                            <form id="product" action="">
-                              <input id="barcode" type="text" placeholder="Insert codebar" value="7613269300748">
-                              <br><button id="check" type="button" class="btn btn-default">Check</button>
-                            </form>
+                            <div class="barcode-input input-group">
+                                <div class="input-group-addon">Barcode</div>
+                                <input id="barcode" type="text" placeholder="Insert codebar" class="form-control">
+                            </div>
+                            <button id="check" type="button" class="btn btn-block btn-primary">Check</button>
                             <h3 id="product-name"></h3>
                             <p id="product-composition"></p>
 
@@ -119,7 +120,7 @@
                     <br><br>
                     This is an open source project, source code is available on Github: <a href="https://github.com/foodandme/foodandme">github.com/foodandme/foodandme</a>
                     <hr>
-                    <small class="pull-right">Version 0.0.13</small>
+                    <small class="pull-right">Version 0.0.14</small>
 
                 </div>
             </div>
@@ -133,6 +134,6 @@
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="script.js?v=0.0.13"></script>
+<script src="script.js?v=0.0.14"></script>
 
 </html>
