Change error message

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <button id="check" type="button" class="btn btn-block btn-primary">Check</button>
                             <h3 id="product-name"></h3>
                             <p class="alert alert-success hide" id="check-ok">Yep, looks all right.</p>
-                            <p class="alert alert-danger hide" id="check-nok">Something's wrong, double check the composition!</p>
+                            <p class="alert alert-danger hide" id="check-nok">Something's wrong, check the composition!</p>
                             <p class="alert alert-warning hide" id="check-nodata">No data to process... You'll have to do it yourself, sorry.</p>
                             <p id="product-composition"></p>
                         </div>
