Better CSV field

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                             </div>
                             <form id="restrictions-form" action="">
                                 <div id="restrictions" class="form-group">
-                                    <label>Change your restrictions:</label>
-                                    <div class="checkbox"><label>
-                                        <input type="text" id="custom-unwanted-nutriment" placeholder="Custom CSV format" />
-                                    </label></div>
+                                    <div class="input-group">
+                                        <div class="input-group-addon">Others ingredients</div>
+                                        <input id="custom-unwanted-nutriment" type="text" class="form-control" placeholder="Comma separated list">
+                                    </div>
                                 </div>
                             </form>
                             <div style="margin:20px 0;" id="alter-restriction-saved" class="alert alert-success hide" role="alert">
