--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="addtohomescreen/addtohomescreen.css">
     <link rel="stylesheet" type="text/css" href="style.css?v=0.1.3">
 
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="favicon/apple-touch-icon-57x57.png" />
@@ -29,6 +30,9 @@
 	<meta name="msapplication-square150x150logo" content="favicon/mstile-150x150.png" />
 	<meta name="msapplication-wide310x150logo" content="favicon/mstile-310x150.png" />
 	<meta name="msapplication-square310x310logo" content="favicon/mstile-310x310.png" />
+
+    <script src="addtohomescreen/addtohomescreen.min.js"></script>
+    <script>addToHomescreen();</script>
 
 </head>
 <body>
