--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
 
                     <br><br>
                     This is an open source project, source code is available on Github: <a href="https://github.com/foodandme/foodandme">github.com/foodandme/foodandme</a>
-                    <hr>
+                    <br>
+		    This software is a proof of concept provided 'as is' without garanty of any kind. Use it with care!
+		    <hr>
                     <small class="pull-right">Version 0.1.3</small>
 
                 </div>
